horizontal scrolling avoidance for contacts page

--- a/wisehands/shop/css/shop.css
+++ b/wisehands/shop/css/shop.css
@@ -76,3 +76,7 @@ body.modal-open {
 .buyButtonBotMargin {
     margin-bottom: .5em;
 }
+
+main {
+    overflow: hidden;
+}
